# studyOpenGL

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: App.h  EBO.h  ImGuiHandler.h  Shader.h  Timer.h  Transform.h  UI.h  VAO.h  VBO.h  Window.h
App/include/BufferObjs/: VAO.h
App/include/Textures/: Texture.h
App/include/UI/: Settings.h  UI.h
App/include/utils/: Debug.h  Timer.h
App/shaders/: colored.frag  colored.vert  default.frag  default.vert  second.frag  textured.frag  textured.vert
App/src/: App.cpp  EBO.cpp  ImGuiHandler.cpp  Shader.cpp  Transform.cpp  UI.cpp  VAO.cpp  VBO.cpp  Window.cpp  main.cpp
App/src/BufferObjs/: EBO.cpp  VAO.cpp  VBO.cpp
App/src/Shader/: Shader.cpp
App/src/Textures/: Texture.cpp
App/src/UI/: UI.cpp
